| Summary: | ASTERISK-22858: Crash in chan_pjsip/PJSIP stack when unsupported codec is specified in allow | ||
| Reporter: | Anthony Messina (amessina) | Labels: | |
| Date Opened: | 2013-11-15 14:40:48.000-0600 | Date Closed: | 2013-11-27 20:12:50.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 12.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Fedora 19 x86_64 | Attachments: | ( 0) backtrace.txt |
| Description: | When making an internal call from one PJSIP extension to another PJSIP/TLS extension, Asterisk terminates with signal 6. The dialplan is as follows. I will attach the backtrace.
{code} [global] amessina=PJSIP/amessina [mss-chicago] exten => amessina,1,Goto(2208,1) exten => 2208,1,Gosub(mss-stdexten,s,1(${EXTEN},${amessina})) [mss-stdexten] exten => s,1,GotoIf($["${CHANNEL(name)}" = "Message/ast_msg_queue"]?mss-messaging,s,1) same => n,Gosub(in,${ARG1},1) same => n,Dial(${ARG2},30) same => n,Hangup() {code} | ||
| Comments: | By: Anthony Messina (amessina) 2013-11-15 14:41:36.145-0600 Program terminated with signal 6, Aborted. By: Anthony Messina (amessina) 2013-11-27 08:25:27.133-0600 This issue may be reproduced by adding an unsupported codec to a PJSIP endpoint. Once I removed the following, I no longer see the program termination. Likely there needs to be a better way to catch and raise this error. {code} allow=h264 {code} By: Matt Jordan (mjordan) 2013-11-27 08:42:48.474-0600 Thanks for the info - that should help us fix this a lot quicker. | ||